--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -6,7 +6,7 @@ on:
   #pull_request:
   #  branches: [ main ]
   schedule:
-    - cron: '27 0,4,7,10,12,14 * * *'
+    - cron: '08:27, 09:27, 10:27, 11:27, 12:27, 13:27'
   watch:
     types: started
   workflow_dispatch:
